Thu Mar 26 12:47:42 1998  Stephan Kulow  <coolo@kde.org>
	
	* kfilesimpleview.cpp: improved scrolling in simple view

	* kfileinfocontents.cpp: add a / after a found dir

	* kfiledialog.cpp: fixed bug for !showFilter

Wed Mar 25 18:39:09 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfileinfocontents.cpp: completion now working
        
        * kcombiview.cpp: changed behaviour for completion, it
        now highlights completed directory and file                
        
Tue Mar 24 16:08:46 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfileinfocontents.cpp: sorting now fully working
        
        * kfiledialog.cpp: modifications for sorting in the on the
        fly reconfiguration
        
        * kfileinfocontents.*: modification to the constructor 
        to pass along the sorting
        
        * kfiledetaillist.*: modification to the constructor 
        to pass along the sorting
        
        * kcombiview.*: modification to the constructor 
        to pass along the sorting

        * kfilesimpleview.*: modification to the constructor 
        to pass along the sorting

Tue Mar 24 10:45:15 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfileinfocontents.cpp: sorting fixed, the feature of keeping 
        directories grouped is still missing though

Mon Mar 23 22:59:18 1998  Stephan Kulow  <coolo@kde.org>

	* kfiledetaillist.h: added acceptsFiles() and acceptsDirs() to
	make dirs-only views useful
	
	* kfileinfocontents.cpp: OK, completion is back again, but 
	currently not working, because the code is missing ;-)

Mon Mar 23 00:08:02 1998  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: moved all GM related things into initGUI() to
	make recreation possible

Sun Mar 22 00:22:46 1998  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: use KShellProcess now

	* kfiledialog.h: added virtual function initFileList to made 
	KFileDialog customable

	* kfiledialog.cpp: show a combo box, in case more filters are given
